--- a/components/compositing/Cargo.toml
+++ b/components/compositing/Cargo.toml
@@ -42,6 +42,7 @@ webrender = { git = "https://github.com/servo/webrender", features = ["capture"]
 webrender_api = { git = "https://github.com/servo/webrender" }
 webrender_surfman = { path = "../webrender_surfman" }
 webxr = { git = "https://github.com/servo/webxr" }
+secret_structs = { path = "../../info-flow-library/ifc_library/secret_structs/", package="secret_structs" }
 
 [build-dependencies]
 toml = "0.5"
