--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "info-flow-library"]
 	path = info-flow-library
-	url = git@github.com:PLaSSticity/info-flow-library.git
+	url = https://github.com/PLaSSticity/info-flow-library.git
