--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "info-flow-library"]
 	path = info-flow-library
 	url = https://github.com/PLaSSticity/info-flow-library.git
+	branch = dynamic
