--- a/components/keyboard_wrapper/Cargo.toml
+++ b/components/keyboard_wrapper/Cargo.toml
@@ -17,6 +17,7 @@ default = []
 [dependencies]
 keyboard-types = "0.6"
 secret_structs = { path = "../../info-flow-library/ifc_library/secret_structs/", package="secret_structs" }
+serde = { version = "1.0", features = ["derive"] }
 
 [build-dependencies]
 toml = "0.5"
