--- a/components/script_traits/Cargo.toml
+++ b/components/script_traits/Cargo.toml
@@ -45,3 +45,6 @@ webdriver = "0.44"
 webgpu = { path = "../webgpu" }
 webrender_api = { git = "https://github.com/servo/webrender" }
 webxr-api = { git = "https://github.com/servo/webxr", features = ["ipc"] }
+
+keyboard_wrapper = { path = "../keyboard_wrapper" }
+secret_structs = { path = "../../info-flow-library/ifc_library/secret_structs/", package="secret_structs" }
