--- a/ports/winit/Cargo.toml
+++ b/ports/winit/Cargo.toml
@@ -13,6 +13,12 @@ name = "servo"
 path = "main.rs"
 bench = false
 
+[dependencies]
+keyboard_wrapper = { path = "../../components/keyboard_wrapper" }
+secret_structs = { path = "../../info-flow-library/ifc_library/secret_structs/", package="secret_structs" }
+secret_macros = {path = "../../info-flow-library/ifc_library/macros/", package="secret_macros"}
+
+
 [target.'cfg(windows)'.build-dependencies]
 winres = "0.1"
 
