--- a/components/keyboard_wrapper/Cargo.toml
+++ b/components/keyboard_wrapper/Cargo.toml
@@ -19,6 +19,8 @@ keyboard-types = "0.6"
 secret_structs = { path = "../../info-flow-library/ifc_library/secret_structs/", package="secret_structs" }
 secret_macros = { path = "../../info-flow-library/ifc_library/macros/", package="secret_macros" }
 serde = { version = "1.0", features = ["derive"] }
+malloc_size_of = { path = "../malloc_size_of" }
+malloc_size_of_derive = "0.1"
 
 [build-dependencies]
 toml = "0.5"
