--- a/components/constellation/Cargo.toml
+++ b/components/constellation/Cargo.toml
@@ -46,6 +46,7 @@ webrender_api = { git = "https://github.com/servo/webrender" }
 webrender_traits = { path = "../webrender_traits" }
 webxr-api = { git = "https://github.com/servo/webxr", features = ["ipc"] }
 
+#Add paths to Carapace secret_structs and servo-local additions to API
 keyboard_wrapper = { path = "../keyboard_wrapper" }
 secret_structs = { path = "../../info-flow-library/ifc_library/secret_structs/", package="secret_structs" }
 
