--- a/components/script/Cargo.toml
+++ b/components/script/Cargo.toml
@@ -121,6 +121,7 @@ webrender_api = { git = "https://github.com/servo/webrender" }
 webxr-api = { git = "https://github.com/servo/webxr", features = ["ipc"] }
 xml5ever = "0.17"
 
+#Add paths to Carapace secret_structs and secret_macros and servo-local additions to API
 keyboard_wrapper = { path = "../keyboard_wrapper" }
 secret_structs = { path = "../../info-flow-library/ifc_library/secret_structs/", package="secret_structs" }
 secret_macros = {path = "../../info-flow-library/ifc_library/macros/", package="secret_macros"}
