--- a/components/keyboard_wrapper/Cargo.toml
+++ b/components/keyboard_wrapper/Cargo.toml
@@ -1,3 +1,4 @@
+#Carapace: Added Cargo.toml for servo-specific usage of secrets.
 [package]
 name = "keyboard_wrapper"
 version = "0.0.1"
@@ -21,6 +22,7 @@ secret_macros = { path = "../../info-flow-library/ifc_library/macros/", package=
 serde = { version = "1.0", features = ["derive"] }
 malloc_size_of = { path = "../malloc_size_of" }
 malloc_size_of_derive = "0.1"
+unicode-segmentation = "1.1.0"
 
 [build-dependencies]
 toml = "0.5"
