--- a/components/malloc_size_of/Cargo.toml
+++ b/components/malloc_size_of/Cargo.toml
@@ -54,5 +54,6 @@ void = "1.0.2"
 webrender_api = { git = "https://github.com/servo/webrender", optional = true }
 xml5ever = { version = "0.17", optional = true }
 
+#Add paths to Carapace secret_structs and secret_macros
 secret_structs = { path = "../../info-flow-library/ifc_library/secret_structs/", package="secret_structs" }
 secret_macros = { path = "../../info-flow-library/ifc_library/macros/", package="secret_macros" }
